syntax = "proto3";
package protobuf.user;

option go_package = "protobuf-v1/golang/user";

import "google/protobuf/timestamp.proto";

message User {
  string id = 1;
  string name = 2;
  string email = 3;
  string team_id = 4;
  google.protobuf.Timestamp created_at = 5;
}

message GetRequest {
  string id = 1;
}

message UpdateRequest {
  string id = 1;
  string name = 2;
}

service UserService {
  rpc Get(GetRequest) returns (User);
  rpc Update(UpdateRequest) returns (User);
}